clusters/cl01tl/manifests/donetick/HTTPRoute-donetick.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: donetick
  labels:
    app.kubernetes.io/instance: donetick
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: donetick
    helm.sh/chart: donetick-5.2.1
  annotations:
    gethomepage.dev/description: Donetick
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Knowledge
    gethomepage.dev/icon: sh-donetick.webp
    gethomepage.dev/name: Tasks
    gethomepage.dev/podSelector: ""
    gethomepage.dev/siteMonitor: http://donetick.donetick:80/api/v1/health
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "350"
  namespace: donetick
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "donetick.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: donetick
          namespace: donetick
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
